# AI-Interview-Copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_gemini.py  test_gemini2.py
backend/: config.py  main.py
backend/models/: schemas.py
backend/routers/: feedback.py  interview.py  upload.py
backend/services/: eval_chain.py  question_chain.py  rag_service.py  resume_parser.py  session_manager.py  stt_service.py  tts_service.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: FeedbackPage.jsx  InterviewPage.jsx  LandingPage.jsx  UploadPage.jsx
frontend/src/services/: api.js
