[project]
name = "ai-interview-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "gtts>=2.5.4",
    "gunicorn>=26.0.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sentence-transformers>=0.2.5.1",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.51.0",
]
